l10n:  delete svn meta data sent
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105386 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ms/upgradedialog.lang
+++ b/ms/upgradedialog.lang
@@ -43,3 +43,51 @@ experience faster performance
 
 ;enjoy greater customization
 enjoy greater customization
+;Your version of Firefox is no longer protected against online attacks.
+Your version of Firefox is no longer protected against online attacks.
+
+
+;This is your last reminder before you will be automatically updated to the latest version
+This is your last reminder before you will be automatically updated to the latest version
+
+
+;Stay safe online
+Stay safe online
+
+
+;Enjoy new features
+Enjoy new features
+
+
+;Your version of Firefox will soon be vulnerable to online attacks.
+Your version of Firefox will soon be vulnerable to online attacks.
+
+
+;You will be prompted once more before being automatically updated.
+You will be prompted once more before being automatically updated.
+
+
+;URGENT!
+URGENT!
+
+
+;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+
+
+;We recommend:
+We recommend:
+
+
+;Downloading a compatible browser
+Downloading a compatible browser
+
+
+;Installing a free upgrade to your <a %s>operating system</a>
+Installing a free upgrade to your <a %s>operating system</a>
+
+
+;Upgrading your <a %s>operating system</a>
+Upgrading your <a %s>operating system</a>
+
+
