[es] l10n of contribute.lang.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105410 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/mozorg/contribute.lang
+++ b/es-ES/mozorg/contribute.lang
@@ -1,172 +1,169 @@
 ;Get Involved: Volunteer Opportunities at Mozilla
-Get Involved: Volunteer Opportunities at Mozilla
+Participa: oportunidades para colaborar como voluntario en Mozilla
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
-This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
+Este video requiere un navegador compatible con video abierto o <a href="http://www.adobe.com/go/getflashplayer">Flash Player de Adobe</a>.
 
 
 ;You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
-You don’t have to be a C++ guru (or even know what that means!) to get involved.<br><b>You just have to love the Web.</b>
+No tienes que ser un gurú de C++ (¡ni siquiera saber lo que significa!) para participar.<br><b>Solo tienes que amar la Web.</b>
 
 
 ;Please enter a valid email address.
-Please enter a valid email address.
+Por favor, escribe una dirección de correo válida.
 
 
 ;You must agree to the privacy policy.
-You must agree to the privacy policy.
+Debes aceptar la política de privacidad.
 
 
 ;Please select an area of interest.
-Please select an area of interest.
+Por favor, selecciona un área de interés.
 
 
 ;Please tell us more about your interests.
-Please tell us more about your interests.
+Háblanos sobre tus intereses.
 
 
 ;Your CAPTCHA response did not match. Please try again.
-Your CAPTCHA response did not match. Please try again.
+Tu respuesta de CAPTCHA no coincide. Inténtalo de nuevo, por favor.
 
 
 ;Want to help?
-Want to help?
+¿Quieres ayudar?
 
 
 ;YOUR EMAIL HERE
-YOUR EMAIL HERE
+TU CORREO AQUÍ
 
 
 ;Submit&nbsp;»
-Submit&nbsp;»
+Enviar&nbsp;»
 
 
 ;Send us a note and we can get you started right away.
-Send us a note and we can get you started right away.
+Envíanos una nota y te ayudaremos a comenzar ahora mismo.
 
 
 ;Hi, I’m interested in…
-Hi, I’m interested in…
+¡Hola! Me interesa…
 
 
 ;I’d like to receive regular contribution news by email
-I’d like to receive regular contribution news by email
-
+Me gustaría recibir regularmente por correo información sobre cómo colaborar
 
 ;Thank you for getting in touch.
-Thank you for getting in touch.
+Gracias por seguir en contacto.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
+Alguien de Mozilla se pondrá en contacto contigo muy pronto para darte toda la información sobre cómo participar. Mientras tanto, explora algunas de las oportunidades para colaborar como voluntario que te mostramos a continuación.
 
 
 ;Find an opportunity
-Find an opportunity
+Buscar una oportunidad
 
 
 ;Sort By:
-Sort By:
+Ordenar por:
 
 
 ;Interest
-Interest
+Interés
 
 
 ;Location
-Location
+Lugar
 
 
 ;Newsletter
-Newsletter
+Boletín
 
 
 ;Helping Users
-Helping Users
+Asistencia a usuarios
 
 
 ;Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
-Interested in helping others get the most out of using Firefox and other Mozilla projects? Our support process relies on enthusiastic contributors like you.
+¿Te interesa ayudar a que otros obtengan lo máximo de Firefox y de otros proyectos de Mozilla? Nuestro proceso de asistencia depende de colaboradores entusiastas como tú.
 
 
-;Find out more about <a href="https://support.mozilla.com/kb/superheroes-wanted">supporting Firefox</a>, <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> and <a href="http://www.mozilla.org/support/">other Mozilla projects</a>.
-Find out more about <a href="https://support.mozilla.com/kb/superheroes-wanted">supporting Firefox</a>, <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> and <a href="http://www.mozilla.org/support/">other Mozilla projects</a>.
+;Find out more about <a href="https://support.mozilla.com/kb/superheroes-wanted">supporting Firefox</a>, <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a> and <a href="http://www.mozilla.org/support/">other Mozilla projects</a>.
+Descubre más información sobre <a href="https://support.mozilla.com/kb/superheroes-wanted">cómo ofrecer ayuda para Firefox</a>, <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a> y <a href="http://www.mozilla.org/support/">otros proyectos de Mozilla</a>.
 
 
 ;You can also join our <a href="https://support.mozilla.com/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-You can also join our <a href="https://support.mozilla.com/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+También puedes unirte a nuestra <a href="https://support.mozilla.com/army-of-awesome">Armada Alucinante</a> ayudando a usuarios en Twitter.
 
 
 ;Quality Assurance
-Quality Assurance
+Garantía de calidad
 
 
 ;Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
-Quality assurance testing is one of the easiest ways to get started with Mozilla and is a great way to get familiar with our code and tools.
+Garantizar la calidad es una de las formas más fáciles de comenzar con Mozilla y una forma genial de familiarizarte con nuestro código y nuestras herramientas.
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
+Ayúdanos a <a href="http://quality.mozilla.org/teams/desktop-firefox/">cazar bugs</a> en Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">comprobar los sitios web de Mozilla</a> u obtén más información sobre <a href="http://quality.mozilla.org/">otras oportunidades de pruebas</a>.
 
 
 ;Coding
-Coding
+Crear código
 
 
 ;<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
-<a href="https://developer.mozilla.org/en/Introduction">Developers can help</a> Mozilla by adding new features, making our technology smaller and faster and making development easier for others.
+Los <a href="https://developer.mozilla.org/en/Introduction">desarrolladores pueden ayudar</a> a Mozilla agregando nuevas características, reduciendo y acelerando nuestra tecnología y facilitando el desarrollo a otros programadores.
 
 
 ;You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
-You can find many developers on <a href="http://irc.mozilla.org">IRC</a> so stop by and ask questions to learn more. Our web sites are <a href="http://blog.mozilla.com/webdev/get-involved/">open for web ninjas</a> to hack on too.
+Puedes encontrar a muchos desarrolladores en <a href="http://irc.mozilla.org">IRC</a>, así que pásate y haz preguntas para saber más. Nuestros sitios web son <a href="http://blog.mozilla.com/webdev/get-involved/">abiertos para que los ninjas web</a> hackeen también.
 
 
 ;Spread the Word
-Spread the Word
+Difunde
 
 
 ;Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
-Help us spread the word about how Firefox and other Mozilla projects are building a better Internet. Share Firefox with the world by <a href="https://affiliates.mozilla.org">becoming an Affiliate</a> and then check out our <a href="https://wiki.mozilla.org/MarketingGuide">Marketing Guide</a> for more ways to get involved.
+Ayúdanos a dar a conocer cómo Firefox y otros proyectos de Mozilla están construyendo un Internet mejor. Comparte Firefox con el mundo <a href="https://affiliates.mozilla.org">convirtiéndote en simpatizante</a> y consulta nuestra <a href="https://wiki.mozilla.org/MarketingGuide">Guía de Difusión</a> para conocer más formas de participación.
 
 
 ;Find out about <a href="/contribute/areas.html">more areas of interest…</a>
-Find out about <a href="/contribute/areas.html">more areas of interest…</a>
+Descubre <a href="/contribute/areas.html">más áreas de interés…</a>
 
 
 ;map
-map
+mapa
 
 
 ;US and Canada
-US and Canada
+EE. UU. y Canadá
 
 
 ;Europe
-Europe
+Europa
 
 
 ;Latin America
-Latin America
+América Latina
 
 
 ;Africa and the Middle East
-Africa and the Middle East
+África y Oriente Medio
 
 
 ;Asia and the South Pacific
-Asia and the South Pacific
+Asia y el Pacífico Sur
 
 
 ;Antarctica
-Antarctica
+Antártida
 
 
 ;Sign up for a weekly newsletter that is full of community news and contribution opportunities.
-Sign up for a weekly newsletter that is full of community news and contribution opportunities.
+Suscríbete a un boletín semanal que está lleno de noticias de la comunidad y oportunidades de colaboración.
 
 
 ;Thank you!
-Thank you!
-
-
+¡Gracias!
