l10n: update contribute page .lang files, add a separate file for the form
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105411 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/mozorg/contribute.lang
+++ b/fr/mozorg/contribute.lang
@@ -170,3 +170,11 @@ Sign up for a weekly newsletter that is full of community news and contribution 
 Thank you!
 
 
+
+
+;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+
+
+;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
+Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
