l10n: es-ES, update contribute file
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105412 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/mozorg/contribute.lang
+++ b/es-ES/mozorg/contribute.lang
@@ -89,12 +89,13 @@ Asistencia a usuarios
 ¿Te interesa ayudar a que otros obtengan lo máximo de Firefox y de otros proyectos de Mozilla? Nuestro proceso de asistencia depende de colaboradores entusiastas como tú.
 
 
-;Find out more about <a href="https://support.mozilla.com/kb/superheroes-wanted">supporting Firefox</a>, <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a> and <a href="http://www.mozilla.org/support/">other Mozilla projects</a>.
-Descubre más información sobre <a href="https://support.mozilla.com/kb/superheroes-wanted">cómo ofrecer ayuda para Firefox</a>, <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a> y <a href="http://www.mozilla.org/support/">otros proyectos de Mozilla</a>.
+;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
+Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
+#Descubre más información sobre <a href="https://support.mozilla.org/kb/superheroes-wanted">cómo ofrecer ayuda para Firefox</a>, <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a> y <a href="http://www.mozilla.org/support/">otros proyectos de Mozilla</a>.
 
 
-;You can also join our <a href="https://support.mozilla.com/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
-También puedes unirte a nuestra <a href="https://support.mozilla.com/army-of-awesome">Armada Alucinante</a> ayudando a usuarios en Twitter.
+;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
+También puedes unirte a nuestra <a href="https://support.mozilla.org/army-of-awesome">Armada Alucinante</a> ayudando a usuarios en Twitter.
 
 
 ;Quality Assurance
