--- a/es-ES/mozorg/contribute.lang
+++ b/es-ES/mozorg/contribute.lang
@@ -1,5 +1,5 @@
 ;Get Involved: Volunteer Opportunities at Mozilla
-Participa: oportunidades para colaborar como voluntario en Mozilla
+¡Participa! Oportunidades para colaborar como voluntario en Mozilla
 
 
 ;This video requires a browser with support for open video or the <a href="http://www.adobe.com/go/getflashplayer">Adobe Flash Player</a>.
@@ -90,8 +90,7 @@ Asistencia a usuarios
 
 
 ;Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
-Find out more about <a href="https://support.mozilla.org/kb/superheroes-wanted">supporting Firefox</a> and <a href="http://support.mozillamessaging.com/en-US/kb/superheroes-wanted">Thunderbird</a> users.
-#Descubre más información sobre <a href="https://support.mozilla.org/kb/superheroes-wanted">cómo ofrecer ayuda para Firefox</a>, <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a> y <a href="http://www.mozilla.org/support/">otros proyectos de Mozilla</a>.
+Descubre más información sobre cómo ayudar a usuarios de <a href="https://support.mozilla.org/kb/superheroes-wanted">Firefox</a> y de <a href="http://support.mozillamessaging.com/kb/superheroes-wanted">Thunderbird</a>.
 
 
 ;You can also join our <a href="https://support.mozilla.org/army-of-awesome">Army of Awesome</a> by helping users on Twitter.
