--- a/es-ES/mozorg/contribute-form.lang
+++ b/es-ES/mozorg/contribute-form.lang
@@ -1,40 +1,39 @@
 
 
 ;Please tell us more about your interests.
-Please tell us more about your interests.
+Háblanos sobre tus intereses.
 
 
 ;Want to help?
-Want to help?
+¿Quieres ayudar?
 
 
 ;Please select an area of interest.
-Please select an area of interest.
+Por favor, selecciona un área de interés.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-
+Alguien de Mozilla se pondrá en contacto contigo muy pronto para darte toda la información sobre cómo participar. Mientras tanto, explora algunas de las oportunidades para colaborar como voluntario que te mostramos a continuación.
 
 ;Hi, I’m interested in…
-Hi, I’m interested in…
+¡Hola! Me interesa…
 
 
 ;I’d like to receive regular contribution news by email
-I’d like to receive regular contribution news by email
+Me gustaría recibir regularmente por correo información sobre cómo colaborar
 
 
 ;Submit&nbsp;»
-Submit&nbsp;»
+Enviar&nbsp;»
 
 
 ;Send us a note and we can get you started right away.
-Send us a note and we can get you started right away.
+Envíanos una nota y te ayudaremos a comenzar ahora mismo.
 
 
 ;Your CAPTCHA response did not match. Please try again.
-Your CAPTCHA response did not match. Please try again.
+Tu respuesta de CAPTCHA no coincide. Inténtalo de nuevo, por favor.
 
 
 ;Thank you for getting in touch.
-Thank you for getting in touch.
+Gracias por seguir en contacto.
