--- a/da/mobile.lang
+++ b/da/mobile.lang
@@ -2,35 +2,35 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Hent Firefox til Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Download til <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Gratis fra Android Market
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+Eller besøg <a %s>Firefox.com/m</a> på din mobiltelefon.
 
 
 ;Supported Devices
-Supported Devices
+Understøttede enheder
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Hent den fra iTunes - GRATIS
 
 
 ;Firefox Home for <span>iPhone</span>
-Firefox Home for <span>iPhone</span>
+Firefox Home til <span>iPhone</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Få adgang til din Firefox' historik, bogmærker og åbne faneblade på din iPhone.
 
 
 ;Download Firefox to <span>Your Mobile</span>
@@ -38,15 +38,15 @@ Download Firefox to <span>Your Mobile</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+Har du lyst til at teste de nyeste funktioner?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Hent Firefox Home til iPhone
 
 
 ;Download Beta for Android
-Download Beta for Android
+Download Beta til Android
 
 
 ;Download
@@ -54,75 +54,74 @@ Download
 
 
 ;for
-for
+til
 
 
 ;Free from iTunes
-Free from iTunes
+Gratis fra iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+Du vil opleve spritnye funktioner og give feedback, der vil hjælpe os med at forbedre og finpudse funktionerne i den færdige udgave.
 
 
 ;Developer Tools
-Developer Tools
+Udviklingsværktøjer
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-
+Du kan installere den mobile version af Firefox på din stationære computer, hvis du vil hjælpe med at teste, give feedback eller lave tilføjelser.
 
 ;Connect With Firefox for Mobile:
 Connect With Firefox for Mobile:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Månedligt nyhedsbrev
 
 
 ;Follow us
-Follow us
+Følg os
 
 
 ;Become a fan
-Become a fan
+Bliv en fan
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+Firefox er fyldt med innovationer, der lader dig taste mindre, surfe mere og komme på nettet hurtigt og let.
 
 
 ;Freedom from typing
-Freedom from typing
+Fri for at taste
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+Den fantastiske skærm husker dine foretrukne websteder, så du kan surfe med lidt eller ingen tastning.
 
 
 ;Best of both worlds
-Best of both worlds
+Det bedste fra begge verdener
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+Firefox til Android er nu redesignet og optimeret til den måde, du surfer på telefoner og tablets.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Surf hurtigt og let
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Du har alt lige ved hånden med funktioner som Sync, faneblads-surfing og bogmærkning med ét tryk.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Brug for hjælp?</a> Besøg vores websted med support til Firefox til Android.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Download og test det build, der passer dig bedst.
 
 
 ;See all our channels for mobile »
