--- a/is/newsletter.lang
+++ b/is/newsletter.lang
@@ -166,7 +166,7 @@ Hönnun tölvupóstsins var of flókinn.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-Ég held tengslum við Mozilla á Facebook og Twitter í staðinn.
+Ég verð í tengslum við Mozilla á Facebook og Twitter í staðinn.
 
 
 ;Submit
@@ -178,18 +178,17 @@ Takk fyrir að láta okkur vita af hverju þú ert hættur.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla fréttabréf
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Takk! Athugaðu póst í innhólfi til að staðfesta áskriftina.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Þú færð póst frá mozilla@e.mozilla.org til að staðfesta áskriftina. Ef þú sérð ekki póstinn, athugaðu þá ruslpóst möppuna. Þú verður að staðfesta áskriftina til að fá fréttabréfið.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-
+Passaðu að bæta póstfanginu okkar: mozilla@e.mozilla.org við nafnabókin hjá þér til að vera viss um að pósturinn lendi alltaf í innhólfinu.
 
