l10n: mr, newsletter.lang update by Sandeep Shedmake
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105551 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mr/newsletter.lang
+++ b/mr/newsletter.lang
@@ -178,18 +178,18 @@
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+मोझीला समाचारपत्र
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+धन्यवाद! कृपया सबस्क्रिप्शनची खात्री करण्यासाठी इंबॉक्स् तपासा.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+सबस्क्रिप्शनची खात्री करण्यासाठी तुम्हाला mozilla@e.mozilla.org कडून इमेल प्राप्त होईल. इमेल न आढळल्यास, स्पॅम फिल्टर तपासा. समाचारपत्र प्राप्त करण्यासाठी सबस्क्रिप्शनची खात्री करणे आवश्यक आहे.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+इंबॉक्सपर्यंत पोहचण्याची खात्री करण्यासाठी कृपया पाठवण्याजोगी पत्ता: mozilla@e.mozilla.org याला पत्ता पुस्तिकामध्ये समाविष्ट करण्याची खात्री करा.
 
 
