--- a/mai/firefoxtesting.lang
+++ b/mai/firefoxtesting.lang
@@ -2,58 +2,58 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+फायरफाक्स बीटाक एंड्राएडक लेल डाउनलोड करू - निःशुल्क
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+फायरफाक्स बीटाक डेस्कटापक लेल डाउनलोड करू - निःशुल्क
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+फायरफाक्स आगाँबला रिलीजकेँ डाउनलोड करू आओर जाँच करू. अरोरा आओर बीटा बिल्ड सँ ताजा नवाचारक अनुभव लिअ.
 
 
 ;Firefox Beta
-Firefox Beta
+फायरफाक्स बीटा
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+एकरा लेल फायरफाक्स बीटा:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+मोबाइलक लेल फायरफाक्स बीटा
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+बीटा डाउनलोड करू आओर फायरफाक्सक अगिला संस्करणक हीस बनू.
 
 
 ;1. Test Features
-1. Test Features
+1. जाँच फीचर
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+हालक प्रदर्शन, मनपसिन्न कएनाइ आओर सुरक्षा संवर्द्धन देखू जे प्राइम टाइमक लेल तैआर अछि.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. रिफाइन करू आओर पोलिश करू
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+हमर मदतिक लेल बग फाइल करू जाहिसँ हमलोकनि स्थिर वातावरणमे फंक्शनकेँ बदलि सकि.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. अपन काज करू
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+फायरफाक्सक अगिला संस्करणमे अपन प्रभाव छोड़ू आओर ४५० मिलिनय लोकनिसभक लेल जे एकरा रोजे उपयोग करैछ.
 
 
 ;Supported devices
-Supported devices
+समर्थन पाएल युक्ति
 
 
