--- a/pt-BR/mozorg/contribute-form.lang
+++ b/pt-BR/mozorg/contribute-form.lang
@@ -1,40 +1,29 @@
-
-
 ;Please tell us more about your interests.
-Please tell us more about your interests.
-
+Por favor, conte-nos mais sobre seus interesses.
 
 ;Want to help?
-Want to help?
-
+Quer ajudar?
 
 ;Please select an area of interest.
-Please select an area of interest.
-
+Por favor, selecione uma área de interesse.
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-
+Alguém da Mozilla entrará em contato com informações sobre como envolver-se conosco. Enquanto aguarda, navegue por algumas oportunidades para tornar-se voluntário disponíveis abaixo.
 
 ;Hi, I’m interested in…
-Hi, I’m interested in…
-
+Oi, estou interessado em…
 
 ;I’d like to receive regular contribution news by email
-I’d like to receive regular contribution news by email
-
+Eu gostaria de receber novidades por e-mail frequentes sobre colaborações
 
 ;Submit&nbsp;»
-Submit&nbsp;»
-
+Enviar&nbsp;»
 
 ;Send us a note and we can get you started right away.
-Send us a note and we can get you started right away.
-
+Envie uma nota para nós e poderemos começar imediatamente.
 
 ;Your CAPTCHA response did not match. Please try again.
-Your CAPTCHA response did not match. Please try again.
-
-
+Sua resposta não corresponde ao código. Por favor, tente novamente.
+ 
 ;Thank you for getting in touch.
-Thank you for getting in touch.
+Obrigado por entrar em contato.
