--- a/hr/mozorg/contribute-form.lang
+++ b/hr/mozorg/contribute-form.lang
@@ -1,40 +1,40 @@
 
 
 ;Please tell us more about your interests.
-Please tell us more about your interests.
+Recite nam više o vašim interesima.
 
 
 ;Want to help?
-Want to help?
+Želite pomoći?
 
 
 ;Please select an area of interest.
-Please select an area of interest.
+Odaberite područje interesa.
 
 
 ;Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
-Someone from Mozilla will get back to you soon with information about how to get involved. While you’re waiting, browse through some of the volunteer opportunities available below.
+Netko iz Mozille će vam se u što kraćem roku javiti s informacijama kako se uključiti. Dok čekate, provjerite neke od niže navedenih volonterskih prilika.
 
 
 ;Hi, I’m interested in…
-Hi, I’m interested in…
+Bok, zanima me…
 
 
 ;I’d like to receive regular contribution news by email
-I’d like to receive regular contribution news by email
+Želim redovito primati novosti o doprinosima putem e-pošte
 
 
 ;Submit&nbsp;»
-Submit&nbsp;»
+Pošalji&nbsp;»
 
 
 ;Send us a note and we can get you started right away.
-Send us a note and we can get you started right away.
+Pošaljite nam poruku i možemo vas odmah uključiti.
 
 
 ;Your CAPTCHA response did not match. Please try again.
-Your CAPTCHA response did not match. Please try again.
+Vaš CAPTCHA odgovor nije ispravan. Pokušajte ponovno.
 
 
 ;Thank you for getting in touch.
-Thank you for getting in touch.
+Hvala što ste nas kontaktirali.
